--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,7 @@
 
         <version.plugin.compiler>3.6.2</version.plugin.compiler>
         <version.plugin.versions>2.4</version.plugin.versions>
+        <version.plugin.release>2.5.3</version.plugin.release>
 
         <version.plugin.surefire>2.20</version.plugin.surefire>
         <version.plugin.cobertura>2.7</version.plugin.cobertura>
@@ -123,6 +124,11 @@
                     <groupId>org.codehaus.mojo</groupId>
                     <artifactId>versions-maven-plugin</artifactId>
                     <version>${version.plugin.versions}</version>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-release-plugin</artifactId>
+                    <version>${version.plugin.release}</version>
                 </plugin>
 
                 <!-- Testing Plugins -->
@@ -283,13 +289,6 @@
                     </plugins>
                 </pluginManagement>
             </build>
-        </profile>
-
-        <profile>
-            <id>prod</id>
-            <properties>
-                <build.profile>prod</build.profile>
-            </properties>
         </profile>
 
         <profile>
