--- a/work-scheduler-web/pom.xml
+++ b/work-scheduler-web/pom.xml
@@ -22,6 +22,7 @@
         <dir.codequality>${project.parent.basedir}/code-quality</dir.codequality>
 
         <version.servlet>4.0.0</version.servlet>
+        <version.jstl>1.2</version.jstl>
         <version.plugin.war>3.1.0</version.plugin.war>
         <version.plugin.jetty>9.4.6.v20170531</version.plugin.jetty>
         <jetty.port>9090</jetty.port>
@@ -58,6 +59,11 @@
             <artifactId>javax.servlet-api</artifactId>
             <version>${version.servlet}</version>
             <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>jstl</artifactId>
+            <version>${version.jstl}</version>
         </dependency>
 
         <dependency>
@@ -123,6 +129,7 @@
                 <artifactId>jetty-maven-plugin</artifactId>
                 <version>${version.plugin.jetty}</version>
                 <configuration>
+                    <scanIntervalSeconds>5</scanIntervalSeconds>
                     <webApp>
                         <contextPath>${jetty.path}</contextPath>
                     </webApp>
@@ -133,4 +140,27 @@
             </plugin>
         </plugins>
     </build>
+
+    <profiles>
+        <profile>
+            <id>jetty-run</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.eclipse.jetty</groupId>
+                        <artifactId>jetty-maven-plugin</artifactId>
+                        <executions>
+                            <execution>
+                                <id>jetty-run</id>
+                                <phase>package</phase>
+                                <goals>
+                                    <goal>run</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
 </project>
