Reverting MySQL JDBC Driver version.

--- a/work-scheduler-data/src/main/resources/database/datasource-dev.properties
+++ b/work-scheduler-data/src/main/resources/database/datasource-dev.properties
@@ -1,4 +1,4 @@
-dataSourceClassName=com.mysql.cj.jdbc.MysqlConnectionPoolDataSource
+dataSourceClassName=com.mysql.jdbc.jdbc2.optional.MysqlConnectionPoolDataSource
 dataSource.user=root
 dataSource.password=1234
 dataSource.databaseName=workscheduler
