dataSource.password modified

--- a/work-scheduler-data/src/main/resources/database/datasource-dev.properties
+++ b/work-scheduler-data/src/main/resources/database/datasource-dev.properties
@@ -1,6 +1,6 @@
 dataSourceClassName=com.mysql.jdbc.jdbc2.optional.MysqlConnectionPoolDataSource
 dataSource.user=root
-dataSource.password=1234
+dataSource.password=J5i0pX89
 dataSource.databaseName=workscheduler
 dataSource.portNumber=3306
 dataSource.serverName=localhost
