--- a/work-scheduler-service/pom.xml
+++ b/work-scheduler-service/pom.xml
@@ -35,6 +35,10 @@
             <groupId>net.sf.dozer</groupId>
             <artifactId>dozer</artifactId>
         </dependency>
+        <dependency>
+            <groupId>io.craftsman</groupId>
+            <artifactId>dozer-jdk8-support</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>org.slf4j</groupId>
