--- a/work-scheduler-web/pom.xml
+++ b/work-scheduler-web/pom.xml
@@ -44,6 +44,11 @@
             <groupId>net.sf.dozer</groupId>
             <artifactId>dozer</artifactId>
         </dependency>
+        <dependency>
+            <groupId>io.craftsman</groupId>
+            <artifactId>dozer-jdk8-support</artifactId>
+        </dependency>
+
 
         <dependency>
             <groupId>org.slf4j</groupId>
