--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,13 @@
     <description>Web application for managing work schedules and shifts.</description>
     <inceptionYear>2017</inceptionYear>
 
+    <scm>
+        <developerConnection>scm:git:git@github.com:gaal-gergo-training/work-scheduler.git</developerConnection>
+        <connection>scm:git:git@github.com:gaal-gergo-training/work-scheduler.git</connection>
+        <url>git@github.com:gaal-gergo-training/work-scheduler.git</url>
+        <tag>HEAD</tag>
+    </scm>
+
     <developers>
         <developer>
             <id>gergogaal</id>
@@ -136,7 +143,12 @@
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-release-plugin</artifactId>
                     <version>${version.plugin.release}</version>
+                    <configuration>
+                        <tagNameFormat>${project.version}</tagNameFormat>
+                        <releaseProfiles>skipChecks</releaseProfiles>
+                    </configuration>
                 </plugin>
+
 
                 <!-- Testing Plugins -->
                 <plugin>
