--- a/work-scheduler-data/pom.xml
+++ b/work-scheduler-data/pom.xml
@@ -39,6 +39,14 @@
             <groupId>io.craftsman</groupId>
             <artifactId>dozer-jdk8-support</artifactId>
         </dependency>
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>jstl</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-validator</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>org.slf4j</groupId>
